objects/Camping_Item__c.object
<CustomObject>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Packed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Camping Item</label>
    <nameField>
        <label>Camping Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Camping Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>